# Arcan.a

./: .gitignore  CMakeLists.txt  Notes.md  Package.swift  README.md  arcana.c  arcana.h  main.c
Sources/Arcana/: CMakeLists.txt  arcana-types.h  arcana.c  arcana.h
Sources/Arcana/include/: arcana.h
Sources/ArcanaDriver/: main.swift
Sources/ArcanaTests/: ArcanaTests.swift
Sources/linux-lbsd/: module.modulemap
Sources/linux-lbsd-wrapper/: Package.swift  cbsd-bridging.h  module.modulemap
